[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conauth"
version = "2.0.0-alpha"
description = "Continuous authentication validation — H100-centralized real-time camera-based authentication monitoring"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
  { name = "Michael Groberman", email = "michael.groberman@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "websockets>=12.0",
  "pydantic>=2.4.0",
  "redis>=5.0.0",
  "asyncpg>=0.29.0",
  "aiofiles>=23.0.0",
  "aiortc>=1.6.0",
  "opencv-python>=4.8.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "ultralytics>=8.0.0",
  "numpy>=1.24.0",
  "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "black>=23.10.0",
  "httpx>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
